[package]
name = "rs_lib"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

# update this by running ./scripts/update-deps.ts
[dependencies]
anyhow = "1.0.57"
console_error_panic_hook = "0.1.6"
js-sys = "=0.3.77"
log = "0.4.20"
serde = "1.0.149"
serde-wasm-bindgen = "=0.6.5"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
async-trait = "0.1.73"
deno_error = "=0.7.0"
deno_path_util = "=0.6.4"
deno_semver = "=0.9.1"
url = "2.5"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.flate2]
version = "1.0.30"
default-features = false
features = ["rust_backend"]

[dependencies.deno_ast]
version = "=0.50.3"
features = ["transpiling"]

[dependencies.deno_cache_dir]
version = "=0.25.0"
features = ["sync"]

[dependencies.deno_config]
path = "../../deno/libs/config"
features = ["workspace","sync"]

[dependencies.deno_graph]
version = "=0.103.1"
features = ["swc"]
default-features = false

[dependencies.deno_npm_cache]
path = "../../deno/libs/npm_cache"

[dependencies.deno_npm_installer]
path = "../../deno/libs/npm_installer"
default-features = false

[dependencies.deno_resolver]
path = "../../deno/libs/resolver"
features = ["deno_ast","graph","sync"]

[dependencies.deno_unsync]
version = "0.4.4"
default-features = false

[dependencies.node_resolver]
path = "../../deno/libs/node_resolver"
features = ["sync"]

[dependencies.sys_traits]
version = "=0.1.17"
features = ["real"]

[target."cfg(target_arch = \"wasm32\")".dependencies.sys_traits]
version = "=0.1.17"
features = ["real","wasm"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
